# autologie

./: .gitignore  LICENSE  README.md  main.ipynb  pyproject.toml  start_autologie.sh
autologie/: __init__.py
autologie/agents/: agent_configs.py  agents.py  web_search_agent.py
autologie/interface/: interface.py  streamlit_interface.py
autologie/llms/: clients.py  inference_logger.py  llms.py  prompt_handlers.py  response_handlers.py  response_handlers_agent.py  utils.py  validators.py
autologie/llms/prompt_assets/: coder_sys_prompt.yml  web_search_sys_prompt.yml
autologie/llms/types/: __init__.py  generation_settings.py  messages.py  payloads.py  prompts.py  responses.py  types.py
autologie/llms/types/helpers/: gbnf_grammar_from_pydantic_models.py  schema_generator.py
autologie/memory/: db.py  tables.py
autologie/tools/: nous_functions.py  objects.py
examples/: test_agent_client.ipynb
server/: model_config.json  requirements.txt  start_llama_cpp_server.sh
