[tool.poetry]
name = "autologie"
version = "0.1.0"
description = ""
authors = ["Srikant Jayaraman <srikant.jyrmn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-cpp-python = "^0.2.78"
gradio = "^4.36.1"
streamlit = "^1.35.0"
llama-index = "^0.10.44"
transformers = "^4.41.2"
strenum = "^0.4.15"
pydantic = "^2.7.3"
ipykernel = "^6.29.4"
docstring-parser = "^0.16"
yfinance = "^0.2.40"
ragatouille = "^0.0.8.post2"
pylint = "^3.2.3"
sqlmodel = "^0.0.19"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
